db-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLables:
     app: db
  template:
   metadata: 
     labels: 
      app: db
  spec:
    conatainers:
      - iamge: postgres:15-alpine
        name: postgres
        ports:
         - containerPort: 5432
           name: postgres
        volumeMount:
         - mountPath: /var/lib/postgressql/data
           name: db-data
        volumes:
         - name: db-data
           emptyDir: {}
