result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels: 
    app: result
spec:
  replicas: 1
  selector:
   matchLabels:
    app: result
  template:
    metadata:
     matchLabels:
       app: result
    spec:
      containers:
       - name: result
         image: dockersamples/examplevotingapp_result
         ports:
          - containerPort: 80
            name: result
