vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  lables: 
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
     labels:
      app: vote
  spec:
    containers:
      - name: vote
        iamge: dockersamples/examplevotingapp_vote
        ports:
          - containerPort: 80
            name: vote
