db-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db
  lables:
    app: db
spec:
  type: ClusterIP
  ports:
   - name: "db-service"
     port: 5432
     targetPort: 5432
  selector:
    app: db
