redis-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      ports: 6379
      targetPort: 6379
  selector:
    app: redis
