result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
 type: NodePort
 ports:
  - name: "result-service"
    port: 80
    nodePort: 31001
 selector:
  app: result
