ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
spec:
 rules: 
 - host: voting.local
   http:
    paths:
     - path: /vote
       pathType: Prefix
       backend:
        service:
         name: vote
         port:
          number: 8080
     - path: /result
       pathType: Prefix
       backend:
        service:
         name: result
         port:
          number: 8081
